# arc-loader

./: main.py  pyproject.toml
arc_agi_dataloader/: __init__.py  __main__.py  augment.py  classes.py  load.py
